[gd_scene load_steps=21 format=3 uid="uid://cjqgf73smtn4y"]

[ext_resource type="Shader" uid="uid://capyldf343kln" path="res://Shader/Edge Detection.gdshader" id="1_3jfne"]
[ext_resource type="Theme" uid="uid://daecgvcuw1c11" path="res://Theme/main_theme.tres" id="1_ap833"]
[ext_resource type="Script" uid="uid://whmuc02c17w6" path="res://Components/Station/station_scene.gd" id="1_qot31"]
[ext_resource type="Shader" uid="uid://bku68cqx0bof2" path="res://Shader/ChromaticAberration.gdshader" id="2_gte3m"]
[ext_resource type="Script" uid="uid://daloi2hy7hm0e" path="res://Components/Station/station.gd" id="2_o1uw3"]
[ext_resource type="Script" uid="uid://jjdn75ju5cku" path="res://Components/Station/camera_pivot.gd" id="3_53pab"]
[ext_resource type="Shader" uid="uid://cnjoqwufxs428" path="res://Shader/Planet.gdshader" id="5_qpcng"]
[ext_resource type="PackedScene" uid="uid://cv3rax1tcrg7b" path="res://Components/Station/Menu/Buy/buy_menu.tscn" id="6_o1uw3"]
[ext_resource type="PackedScene" uid="uid://545ql27c72ib" path="res://Components/Station/Menu/debug_resources.tscn" id="7_qpcng"]
[ext_resource type="PackedScene" uid="uid://jl0atb5w6lik" path="res://Components/Station/Menu/Trade/trade_menu.tscn" id="9_t36wb"]
[ext_resource type="PackedScene" uid="uid://brxco27cauaxs" path="res://Components/Station/Menu/Mining/mining_menu.tscn" id="10_2v0j0"]
[ext_resource type="Texture2D" uid="uid://beo4ycfrjkme4" path="res://UI/ButtonBorder.png" id="11_60soq"]
[ext_resource type="Script" uid="uid://bv3yjfc5mnc8x" path="res://Components/Station/Menu/management_menus.gd" id="11_gte3m"]

[sub_resource type="PlaneMesh" id="PlaneMesh_11fnl"]
flip_faces = true
orientation = 2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b54n2"]
render_priority = 0
shader = ExtResource("1_3jfne")
shader_parameter/depth_threshold = 0.05
shader_parameter/reverse_depth_threshold = 0.25
shader_parameter/normal_threshold = 0.6
shader_parameter/darken_amount = 0.3
shader_parameter/lighten_amount = 1.5
shader_parameter/normal_edge_bias = Vector3(1, 1, 1)
shader_parameter/light_direction = Vector3(-0.96, -0.18, 0.2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qpcng"]
render_priority = 0
shader = ExtResource("5_qpcng")
shader_parameter/radius = 1000.0
shader_parameter/rimRetraction = 2.0
shader_parameter/rimBrightness = 1.0
shader_parameter/rimColor = Color(0.7, 0.5, 0.3, 1)
shader_parameter/animationSpeed = 0.02
shader_parameter/distortionStrength = 0.25

[sub_resource type="BoxMesh" id="BoxMesh_qpcng"]
material = SubResource("ShaderMaterial_qpcng")
size = Vector3(3000, 3000, 3000)

[sub_resource type="SphereMesh" id="SphereMesh_o1uw3"]
radius = 5000.0
height = 10000.0
radial_segments = 32
rings = 16

[sub_resource type="Environment" id="Environment_3jfne"]
background_mode = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gte3m"]
shader = ExtResource("2_gte3m")
shader_parameter/r_displacement = Vector2(3, 0)
shader_parameter/g_displacement = Vector2(0, 0)
shader_parameter/b_displacement = Vector2(-3, 0)
shader_parameter/vignette_intensity = 2.0
shader_parameter/vignette_opacity = 0.6
shader_parameter/vignette_rgb = Color(0, 0, 0, 1)

[node name="StationScene" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ap833")
script = ExtResource("1_qot31")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ap833")
stretch = true
stretch_shrink = 2

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
physics_object_picking = true
size = Vector2i(576, 324)
render_target_update_mode = 4

[node name="Station Scene" type="Node3D" parent="SubViewportContainer/SubViewport"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport/Station Scene"]
transform = Transform3D(0.838204, 0.227013, -0.495861, 0.545356, -0.348915, 0.762132, 8.88318e-09, -0.909243, -0.416265, 0, 8.21117, 0)

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport/Station Scene"]
transform = Transform3D(0.857116, -0.36305, 0.36544, 0.503461, 0.440309, -0.743408, 0.108988, 0.821172, 0.560177, 0, 8.21117, 0)
light_energy = 0.1

[node name="Station" type="Node3D" parent="SubViewportContainer/SubViewport/Station Scene"]
unique_name_in_owner = true
transform = Transform3D(0.819152, -0.573576, 0, 0.554032, 0.79124, -0.258819, 0.148453, 0.212012, 0.965926, 0, 0, 0)
script = ExtResource("2_o1uw3")

[node name="CameraPivot" type="Node3D" parent="SubViewportContainer/SubViewport/Station Scene"]
script = ExtResource("3_53pab")

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport/Station Scene/CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)
far = 40000.0

[node name="EdgeShader Plane" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/Station Scene/CameraPivot/Camera3D"]
visible = false
extra_cull_margin = 16384.0
mesh = SubResource("PlaneMesh_11fnl")
surface_material_override/0 = SubResource("ShaderMaterial_b54n2")

[node name="TOP DEBUG" type="Camera3D" parent="SubViewportContainer/SubViewport/Station Scene/CameraPivot"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 3.85279e-06, 9.78628, -3.39233e-07)
far = 40000.0

[node name="PlanetShader" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/Station Scene"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -696.262, -895.603, -656.448)
visible = false
mesh = SubResource("BoxMesh_qpcng")

[node name="Planet" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/Station Scene"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3000, -5000, -2000)
mesh = SubResource("SphereMesh_o1uw3")

[node name="WorldEnvironment" type="WorldEnvironment" parent="SubViewportContainer/SubViewport/Station Scene"]
environment = SubResource("Environment_3jfne")

[node name="Chromatic Aberration Filter" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_gte3m")
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_ap833")

[node name="BuyMenu" parent="." instance=ExtResource("6_o1uw3")]
layout_mode = 1
theme = ExtResource("1_ap833")

[node name="DebugResources" parent="." instance=ExtResource("7_qpcng")]
layout_mode = 1
theme = ExtResource("1_ap833")

[node name="Management Menus" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_ap833")
script = ExtResource("11_gte3m")

[node name="Background" type="ColorRect" parent="Management Menus"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ap833")
color = Color(0, 0, 0, 0.392157)

[node name="Control" type="Control" parent="Management Menus"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_ap833")

[node name="TradeMenu" parent="Management Menus/Control" instance=ExtResource("9_t36wb")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="MiningMenu" parent="Management Menus/Control" instance=ExtResource("10_2v0j0")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="Buttons" type="MarginContainer" parent="Management Menus"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -64.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("1_ap833")
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Buttons" type="HBoxContainer" parent="Management Menus/Buttons"]
layout_mode = 2
theme = ExtResource("1_ap833")
theme_override_constants/separation = 16
alignment = 2

[node name="Mining" type="TextureButton" parent="Management Menus/Buttons/Buttons"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme = ExtResource("1_ap833")
texture_normal = ExtResource("11_60soq")
stretch_mode = 0

[node name="Market" type="TextureButton" parent="Management Menus/Buttons/Buttons"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme = ExtResource("1_ap833")
texture_normal = ExtResource("11_60soq")
stretch_mode = 0

[connection signal="pressed" from="Management Menus/Buttons/Buttons/Mining" to="Management Menus" method="show_menu" binds= [1]]
[connection signal="pressed" from="Management Menus/Buttons/Buttons/Market" to="Management Menus" method="show_menu" binds= [2]]
